--- a/app/assets/stylesheets/styles/home.scss
+++ b/app/assets/stylesheets/styles/home.scss
@@ -1,7 +1,7 @@
 #home-index {
 	min-height: 1400px;
 	> .header {
-		height: 70vh;
+		height: 75vh;
 		text-align: center;
 		color: white;
 
@@ -12,22 +12,27 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 
-		.container {
-			padding-top: 15vh;
-			padding-bottom: 40px;
+		> div {
+			display: flex;
+			align-items: center;
 
-			> h1 { font-size: 45px; }
-			> p {
-				font-size: 20px;
-				> .emoji-love { font-size: 30px; }
-			}
-
-			> .player-lookup {
-				margin-top: 15vh;
-
+			> .fluid-container {
+				> h1 {
+					font-size: 45px;
+					margin-bottom: -5px;
+				}
 				> p {
-					font-size: 18px;
+					font-size: 20px;
 					> .emoji-love { font-size: 30px; }
+				}
+
+				> .player-lookup {
+					margin-top: 5vh;
+
+					> p {
+						font-size: 18px;
+						> .emoji-love { font-size: 30px; }
+					}
 				}
 			}
 		}
