--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,28 +51,40 @@
 	<%= yield %>
 
 	<footer>
-		<div class="container">
+		<div class="fluid-container">
 			<div class="info">
+				<p>
+					Branch was built in
+					<a class="alt" target="_blank" href="https://golang.org/">Golang</a>,
+					<a class="alt" target="_blank" href="https://nodejs.org/">Node JS</a>, and
+					<a class="alt" target="_blank" href="http://rubyonrails.org/">Ruby on Rails</a>.
+				</p>
+				<p>
+					Code licensed under the 
+					<a class="alt" target="_blank" href="http://www.dbad-license.org/">DBAD Public License</a>.
+				</p>
+				<p>
+					&copy; Branch App, <span class="copyright-year"></span>
+				</p>
+
 				<ul>
 					<li>
-						Branch was built in
-						<a class="alt" target="_blank" href="https://golang.org/">Golang</a>,
-						<a class="alt" target="_blank" href="https://nodejs.org/">Node JS</a>, and
-						<a class="alt" target="_blank" href="http://rubyonrails.org/">Ruby on Rails</a>.
+						<a class="alt" target="_blank" href="https://github.com/branch-app">
+							Github
+						</a>
 					</li>
 					<li>
-						The source is avaiable on
-						<a class="alt" target="_blank" href="https://github.com/branch-app/">github/branch-app</a>
-						and licenced under the
-						<a class="alt" target="_blank" href="http://www.dbad-license.org/">DBAD Public License</a>.
+						<a class="alt" target="_blank" href="https://hub.docker.com/branch-app">
+							Docker Hub
+						</a>
 					</li>
 					<li>
-						&copy; Branch App, <span class="copyright-year"></span>
+						<a class="alt" href="/about">
+							About
+						</a>
 					</li>
 				</ul>
 			</div>
-			<div class="map"></div>
-			<div class="clearfix"></div>
 		</div>
 		<div class="brand"></div>
 	</footer>
