--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="generic-branch-mask">
 			<div class="fluid-container">
 				<h1>Branch</h1>
-				<p>Xbox Live, Halo, and Destiny stats - made easy <span class="emoji-love">💃</span></p>
+				<h3>Xbox Live, Halo, and Destiny stats - made easy <span class="emoji-love">💃</span></h3>
 
 				<form class="player-lookup col-md-offset-4 col-md-4 col-sm-12" method="post" action="/search/">
 					<p>
