--- a/app/assets/stylesheets/mixins/masks.scss
+++ b/app/assets/stylesheets/mixins/masks.scss
@@ -1,7 +1,12 @@
 .generic-branch-mask {
 	background: rgba(61,61,124,1);
 	background: linear-gradient(to bottom, rgba(61,61,124,0.75) 0%, rgba(61,61,124,0) 39%, rgba(42,45,83,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d3d7c', endColorstr='#2A2D53', GradientType=0 );
+	height: 100%;
+}
+
+.fading-branch-mask {
+	background: $brand-primary;
+	background: linear-gradient(-100deg, rgba($brand-tertiary,0.75) 0%, rgba($brand-secondary,0) 39%, rgba($brand-primary,1) 100%);
 	height: 100%;
 }
 
