--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,17 +5,17 @@
 				<h1>Branch</h1>
 				<h3>Xbox Live, Halo, and Destiny stats - made easy <span class="emoji-love">💃</span></h3>
 
-				<form class="player-lookup col-md-offset-4 col-md-4 col-sm-12" method="post" action="/search/">
+				<div class="player-lookup col-md-offset-4 col-md-4 col-sm-12">
 					<p>
 						Looking for someone? <span class="emoji-love">🕵🏻</span>
 					</p>
-					<div class="input-group">
-						<input id="gamertag-search" name="gamertag" type="text" class="form-control" placeholder="Search for...">
+					<form id="player-search" class="input-group" action="/search" method="get">
+						<input id="player-ident" name="playerIdent" type="text" class="form-control" placeholder="Search for...">
 						<span class="input-group-btn">
 							<button class="btn btn-primary" type="submit">Search</button>
 						</span>
-					</div>
-				</form>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
