Attach experience bar to navbar when scrolled past

--- a/app/assets/stylesheets/styles/halo-4/service-record.scss
+++ b/app/assets/stylesheets/styles/halo-4/service-record.scss
@@ -274,9 +274,15 @@
 				}
 			}
 		}
+
+		&.experience-bar {
+			top: 70px;
+			left: 0;
+			right: 0;
+		}
 	}
 
 	.placeholder {
-		height: 150px;
+		height: 1000px;
 	}
 }
