Updated how asset stuff, populated all service record info with real data
- Added helper that checks if a higher resolution asset is available locally and switches to it.
- Moved images from assets to public folder.
- Updated a few things

--- a/app/assets/stylesheets/styles/home.scss
+++ b/app/assets/stylesheets/styles/home.scss
@@ -6,7 +6,7 @@
 		color: white;
 
 		transition: background-image 4s;
-		background-image: image-url('home/halo-5.jpg');
+		background-image: url('/images/home/halo-5.jpg');
 		background-position: 0% 25%;
 		background-attachment: fixed;
 		background-repeat: no-repeat;
