--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -20,7 +20,7 @@
 
 				<div class="col-md-offset-0 col-md-4 recent-match-information">
 					<% if has_recent_matches() %>
-						<div class="match-details col-md-9 no-col-padding">
+						<div class="match-overview col-md-9 no-col-padding">
 							<span class="match-mode"><%= @recent_matches['games'][0]['variantName'] %></span>
 							on
 							<span class="match-map"><%= @recent_matches['games'][0]['mapVariantName'] %></span>
