--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -127,6 +127,32 @@
 						</div>
 					</a>
 				</div>
+				<div class="profile titanfall">
+					<a data-popover-content="#titanfall-explorer" data-toggle="popover" data-trigger="focus" tabindex="1">
+						<div class="col-md-10 flair">
+							<h4>Titanfall</h4>
+							<span><%= @identity['gamertag'] %></span>
+						</div>
+						<div class="col-md-2 dropdown-selector">
+							<i class="fa fa-chevron-down" aria-hidden="true"></i>
+						</div>
+						<div class="clearfix"></div>
+						<div class="hidden" id="titanfall-explorer">
+							<div class="popover-body">
+								<div class="profile titanfall">
+									<a href="#titanfall">
+										<h4>Titanfall</h4>
+									</a>
+								</div>
+								<div class="profile titanfall-2">
+									<a href="#titanfall-2">
+										<h4>Titanfall</h4>
+									</a>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
 			</div>
 			<div class="col-md-3 social">
 				<ul>
