made map image look better

--- a/app/assets/stylesheets/styles/halo-4/service-record.scss
+++ b/app/assets/stylesheets/styles/halo-4/service-record.scss
@@ -5,6 +5,7 @@
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-position-y: bottom;
 
 		.recent-match-index {
 			margin-top: 120px;
