--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -166,6 +166,47 @@
 		</div>
 	</div>
 
+	<div class="page-content fluid-container">
+		<div class="col-md-10">
+			H4_PLAYER_SERVICE_RECORD
+		</div>
+
+		<div class="col-md-2">
+			<nav class="experience-sidebar" <%#data-spy="affix" data-offset-top="100"%>>
+				<ul class="nav">
+					<li class="nav-header">
+						Branch
+					</li>
+					<li class="active">
+						<a href="#">Service Record</a>
+					</li>
+					<li>
+						<a href="#">Match History</a>
+						<ul class="nav">
+							<li><a href="#">War Games</a></li>
+							<li><a href="#">Campaign</a></li>
+							<li><a href="#">Spartan Ops</a></li>
+							<li><a href="#">Custom Games</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">Specializations</a>
+					</li>
+					<li>
+						<a href="#">Competitive Skill Ranks</a>
+					</li>
+				</ul>
+
+				<hr />
+
+				<a id="slide-into-waypoint" class="alt" target="_blank" href="https://app.halowaypoint.com/en-US/Halo4/<%= @identity['gamertag'] %>/wargames/">
+					<i class="fa fa-share" aria-hidden="true"></i>
+					Go To Waypoint
+				</a>
+			</nav>
+		</div>
+	</div>
+
 	<div class="placeholder">
 	</div>
 </div>
