tweaked alignment in footer (move to flexbox mb?)

--- a/app/assets/stylesheets/base/footer.scss
+++ b/app/assets/stylesheets/base/footer.scss
@@ -6,7 +6,8 @@ footer {
 
 	> .content {
 		background: $brand-primary;
-		padding-bottom: 40px;
+		padding-bottom: 30px;
+		padding-top: 30px;
 
 		> .fluid-container {
 			color: #ccc;
