--- a/app/assets/stylesheets/styles/halo-4/service-record.scss
+++ b/app/assets/stylesheets/styles/halo-4/service-record.scss
@@ -1,3 +1,9 @@
+$first-restructure-point: 1425px;
+$second-restructure-point: 1315px;
+$third-restructure-point: 1195px;
+$fourth-restructure-point: 1001px;
+$fifth-restructure-point: 991px;
+
 #halo4-service-record {
 	.header {
 		height: 610px;
@@ -6,6 +12,7 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position-y: bottom;
+
 
 		.recent-match-index {
 			margin-top: 120px;
@@ -42,6 +49,7 @@
 
 		.player-information {
 			margin-top: 70px;
+
 			h1 {
 				color: white;
 				font-size: 55px;
@@ -74,6 +82,7 @@
 			font-weight: 100;
 			font-size: 20px;
 
+
 			.no-col-padding {
 				padding: 0;
 			}
@@ -83,6 +92,10 @@
 					font-weight: 600;
 					font-size: 22px;
 				}
+
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 			}
 
 			.view-match {
@@ -90,7 +103,6 @@
 				font-size: 15px;
 				text-align: right;
 				line-height: 2.1;
-				height: 100%;
 			}
 
 			.details-seperator {
@@ -101,6 +113,9 @@
 			}
 
 			.match-details {
+				height: 57px;
+				overflow: hidden;
+
 				.match-statistic {
 					display: inline-block;
 					margin-right: 40px;
@@ -130,13 +145,43 @@
 							color: $text-light-grey;
 							font-size: 14px;
 						}
-						// font-size: 30px;
+					}
+				}
+			}
+
+
+			@media (min-width: $fifth-restructure-point - 1) and (max-width: $first-restructure-point) {
+				.view-match,
+				.match-statistic.featured-stat,
+				.match-statistic.medals {
+					display: none !important;
+				}
+			}
+			@media (max-width: $fifth-restructure-point) {
+				.view-match,
+				.match-statistic.featured-stat,
+				.match-statistic.medals {
+					display: block !important;
+				}
+
+				.match-details {
+					display: flex;
+					justify-content: center;
+
+					> .match-statistic {
+						margin-right: 40px !important;
 					}
 				}
 			}
 		}
 
 		.player-visual-flairs {
+			transform: 0.5s;
+
+			@media (max-width: $third-restructure-point) {
+				display: none;
+			}
+
 			> .emblem-flair {
 				background-repeat: no-repeat;
 				height: 120px;
@@ -145,9 +190,23 @@
 			}
 			> .spartan-flair {
 				background-repeat: no-repeat;
+				background-position-x: left;
 				height: 350px;
 				margin-top: -120px;
 				transform: scaleX(-1);
+			}
+		}
+
+
+		@media (max-width: $fifth-restructure-point) {
+			.recent-match-index {
+				display: flex;
+				justify-content: center;
+			}
+
+			.player-information {
+				margin-top: 90px;
+				text-align: center;
 			}
 		}
 	}
@@ -161,14 +220,17 @@
 		> .fluid-container {
 			padding-top: 0;
 
-			> .col-md-9 {
+			> .profiles {
 				padding: 0;
+				margin-top: -3px;
+
 
 				> .profile {
 					display: inline-block;
 					padding-left: 75px;
+					padding-top: 3px;
 					padding-right: 20px;
-					margin-right: 20px;
+					margin-right: 5px;
 					height: 75px;
 
 					transition: 0.5s;
@@ -178,9 +240,20 @@
 					background-repeat: no-repeat;
 					background-position: 20px center;
 
+
+					@media (max-width: $first-restructure-point) {
+						background-size: 0px;
+						padding-left: 20px;
+						margin-right: 0;
+					}
+
+
 					> a {
 						display: inline-flex;
 						align-items: center;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						overflow: hidden;
 						height: 100%;
 						text-decoration: none !important;
 
@@ -197,9 +270,15 @@
 								color: $brand-secondary;
 							}
 						}
+					}
 
-						> .dropdown-selector {
-						}
+					&.xbox-live,
+					&.destiny {
+						max-width: 192px;
+					}
+					&.halo,
+					&.titanfall {
+						max-width: 267px;
 					}
 
 					&.xbox-live { background-image: image-url('profiles/xbox-live.png'); }
@@ -260,8 +339,9 @@
 				}
 			}
 
-			.social {
+			> .socials {
 				text-align: right;
+				padding: 0;
 
 				ul {
 					margin: 0;
@@ -269,20 +349,46 @@
 
 					> li {
 						color: #c4c0cd;
+						font-size: 22px;
+						text-align: center;
+						line-height: 3.5;
+
+						display: inline-block;
 						margin: 0;
 						padding: 0;
-						margin-left: 15px;
-						margin-right: 15px;
-						display: inline-block;
+						margin-left: 14px;
+						margin-right: 14px;
+						width: 22px;
+
 						transition: 0.5s;
-						font-size: 22px;
-						line-height: 3.5;
 						cursor: pointer;
+
+						@media (max-width: $first-restructure-point) {
+							margin-right: 5px;
+							margin-left: 5px;
+						}
 
 						&:hover {
 							color: $brand-primary;
 						}
 					}
+				}
+			}
+
+			@media (max-width: $third-restructure-point) {
+				.profiles {
+					display: flex;
+					justify-content: center;
+
+					width: 100%;
+
+					.profile.active {
+						margin-top: 2px !important;
+					}
+				}
+
+				.socials {
+					display: none !important;
 				}
 			}
 		}
@@ -294,10 +400,10 @@
 
 			z-index: 1029;
 		}
-	}
 
-	.experience-bar.affix + .page-content {
-		padding-top: 99px
+		&.experience-bar.affix + .page-content {
+			padding-top: 99px
+		}
 	}
 
 	.experience-sidebar {
