--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -20,7 +20,7 @@
 
 				<div class="col-md-offset-0 col-md-4 recent-match-information">
 					<% if has_recent_matches() %>
-						<div class="match-overview col-md-9 no-col-padding">
+						<div class="match-overview col-xs-9 no-col-padding">
 							<span class="match-mode"><%= @recent_matches['games'][0]['variantName'] %></span>
 							on
 							<span class="match-map"><%= @recent_matches['games'][0]['mapVariantName'] %></span>
@@ -28,22 +28,14 @@
 						<div class="view-match col-md-3 no-col-padding">
 							<a class="alt" href="#">View Details</a>
 						</div>
-						<div class="details-seperator col-md-12 no-col-padding">
+						<div class="details-seperator col-xs-12 no-col-padding">
 							<hr />
 						</div>
-						<div class="match-details col-md-12 no-col-padding">
+						<div class="match-details col-xs-12 no-col-padding">
 							<div class="match-statistic personal-score">
 								<span class="value"><%= number_with_delimiter(@recent_matches['games'][0]['personalScore']) %></span>
 								<div class="key">
 									<span class="header-key">Personal Score</span>
-									<span class="sub-key"><%= @recent_matches['games'][0]['modeName'] %></span>
-								</div>
-							</div>
-
-							<div class="match-statistic medals">
-								<span class="value"><%= number_with_delimiter(@recent_matches['games'][0]['totalMedals']) %></span>
-								<div class="key">
-									<span class="header-key">Medals</span>
 									<span class="sub-key"><%= @recent_matches['games'][0]['modeName'] %></span>
 								</div>
 							</div>
@@ -55,11 +47,19 @@
 									<span class="sub-key"><%= @recent_matches['games'][0]['variantName'] %></span>
 								</div>
 							</div>
+
+							<div class="match-statistic medals">
+								<span class="value"><%= number_with_delimiter(@recent_matches['games'][0]['totalMedals']) %></span>
+								<div class="key">
+									<span class="header-key">Medals</span>
+									<span class="sub-key"><%= @recent_matches['games'][0]['modeName'] %></span>
+								</div>
+							</div>
 						</div>
 					<% end %>
 				</div>
 
-				<div class="col-md-3 col-md-offset-9 player-visual-flairs">
+				<div class="col-md-4 col-md-offset-8 player-visual-flairs">
 					<div class="emblem-flair" style="background-image: url('<%= resolve_asset_url(@service_record['emblemImageUrl'], 120) %>');"></div>
 					<div class="spartan-flair" style="background-image: url('<%= resolve_spartan_image(@gamertag) %>');"></div>
 				</div>
@@ -69,7 +69,7 @@
 
 	<div class="experience-bar" data-spy="affix" data-offset-top="540">
 		<div class="fluid-container">
-			<div class="col-md-9">
+			<div class="profiles col-md-10 col-xs-12">
 				<div class="profile xbox-live">
 					<a href="#xbox-live">
 						<div class="flair">
@@ -80,11 +80,11 @@
 				</div>
 				<div class="profile halo active">
 					<a data-popover-content="#halo-explorer" data-toggle="popover" data-trigger="focus" tabindex="0">
-						<div class="col-md-10 flair">
+						<div class="col-xs-10 flair">
 							<h4>Halo</h4>
 							<span><%= @identity['gamertag'] %></span>
 						</div>
-						<div class="col-md-2 dropdown-selector">
+						<div class="col-xs-2 dropdown-selector">
 							<i class="fa fa-chevron-down" aria-hidden="true"></i>
 						</div>
 						<div class="clearfix"></div>
@@ -129,11 +129,11 @@
 				</div>
 				<div class="profile titanfall">
 					<a data-popover-content="#titanfall-explorer" data-toggle="popover" data-trigger="focus" tabindex="1">
-						<div class="col-md-10 flair">
+						<div class="col-xs-10 flair">
 							<h4>Titanfall</h4>
 							<span><%= @identity['gamertag'] %></span>
 						</div>
-						<div class="col-md-2 dropdown-selector">
+						<div class="col-xs-2 dropdown-selector">
 							<i class="fa fa-chevron-down" aria-hidden="true"></i>
 						</div>
 						<div class="clearfix"></div>
@@ -146,7 +146,7 @@
 								</div>
 								<div class="profile titanfall-2">
 									<a href="#titanfall-2">
-										<h4>Titanfall</h4>
+										<h4>Titanfall 2</h4>
 									</a>
 								</div>
 							</div>
@@ -154,13 +154,12 @@
 					</a>
 				</div>
 			</div>
-			<div class="col-md-3 social">
+			<div class="col-md-2 hidden-xs hidden-sm socials">
 				<ul>
 					<li><i class="fa fa-reddit-alien" aria-hidden="true"></i></li>
 					<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
 					<li><i class="fa fa-twitter" aria-hidden="true"></i></li>
 					<li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
-					<li><i class="fa fa-pinterest" aria-hidden="true"></i></li>
 				</ul>
 			</div>
 		</div>
