--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,6 +15,8 @@ $anchor-secondary-active: $brand-accent-secondary;
 $text-light-grey: #d0d0d0;
 $text-grey: #999;
 
+$seperator-light: #eee;
+
 $extra-small-devices-width: 480px;
 $small-devices-width: 768px;
 $medium-devices-width: 992px;
